<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_below="@+id/toolbar"
        android:gravity="center|top">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:background="@drawable/radius_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imageView"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/appName"
                android:id="@+id/appName"
                android:textSize="25sp"
                android:padding="8dp"
                android:textColor="#373737"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView"
                android:layout_marginTop="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/appVersion"
                android:id="@+id/appVersion"
                android:textSize="20sp"
                android:padding="8dp"
                android:layout_below="@+id/appName"
                android:layout_toEndOf="@+id/imageView"
                android:textColor="#373737" />

        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:background="@drawable/radius_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="top"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/appAuthor"
                android:text="@string/author"
                android:textStyle="italic"
                android:textColor="#373737"
                android:layout_marginTop="4dp"
                android:padding="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/githubURL"
                android:text="@string/github"
                android:textStyle="italic"
                android:textColor="#373737"
                android:padding="8dp"
                android:layout_below="@+id/appAuthor"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/blog"
                android:text="@string/blog"
                android:textStyle="italic"
                android:textColor="#373737"
                android:padding="8dp"
                android:layout_below="@+id/githubURL"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:background="@drawable/radius_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="top"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Reason"
                android:id="@+id/textView2"
                android:textSize="17sp"
                android:padding="8dp"

                android:textColor="#373737"
                android:layout_alignParentTop="true"
                android:layout_marginTop="4dp" />

        </RelativeLayout>

        <!--<View style="@style/MenuLine" />-->

    </LinearLayout>

    <Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        android:longClickable="false" />
</RelativeLayout>
